--- a/sonarqube/templates/deployment.yaml
+++ b/sonarqube/templates/deployment.yaml
@@ -7,6 +7,12 @@ metadata:
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+    app.kubernetes.io/name: {{ template "sonarqube.name" . }}-{{ template "sonarqube.fullname" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app.kubernetes.io/part-of: sonarqube
+    app.kubernetes.io/component: {{ template "sonarqube.fullname" . }}
+    app.kubernetes.io/version: {{ .Values.image.tag | quote }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
@@ -25,13 +31,27 @@ spec:
 {{- with .Values.podLabels }}
 {{ toYaml . | indent 8 }}
 {{- end }}
-{{ if .Values.annotations}}
       annotations:
+        checksum/init-sysctl: {{ include (print $.Template.BasePath "/init-sysctl.yaml") . | sha256sum }}
+        checksum/plugins: {{ include (print $.Template.BasePath "/install-plugins.yaml") . | sha256sum }}
+        checksum/config: {{ include (print $.Template.BasePath "/config.yaml") . | sha256sum }}
+        checksum/secret: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
+{{- if .Values.annotations}}
       {{- range $key, $value := .Values.annotations }}
         {{ $key }}: {{ $value | quote }}
       {{- end }}
 {{- end }}
     spec:
+    {{- if .Values.schedulerName }}
+      schedulerName: {{ .Values.schedulerName }}
+    {{- end }}
+    {{- if .Values.serviceAccount.create }}
+    {{- if .Values.serviceAccount.name }}
+      serviceAccountName: {{ .Values.serviceAccount.name }}
+    {{- else }}
+      serviceAccountName: {{ include "sonarqube.fullname" . }}
+    {{- end }}
+    {{- end }}
       securityContext:
 {{ toYaml .Values.securityContext | indent 8 }}
       {{- if .Values.image.pullSecret }}
@@ -39,41 +59,21 @@ spec:
         - name: {{ .Values.image.pullSecret }}
       {{- end }}
       initContainers:
-        - name: chmod-volume-mounts
-          image: busybox:1.31
-          command:
-            - "sh"
-            - "-c"
-            - 'mkdir -p $(printf "/opt/sonarqube/${1-%s\n}" temp logs data extensions/downloads extensions/plugins/tmp extensions/plugins certs) &&
-               chown 999:999 -R $(printf "/opt/sonarqube/${1-%s\n}" temp logs data extensions/downloads extensions/plugins/tmp extensions/plugins certs)'
-          volumeMounts:
-          - mountPath: /opt/sonarqube/temp
-            name: sonarqube
-            subPath: temp
-          - mountPath: /opt/sonarqube/logs
-            name: sonarqube
-            subPath: logs
-          - mountPath: /opt/sonarqube/data
-            name: sonarqube
-            subPath: data
-          - mountPath: /opt/sonarqube/extensions/plugins/tmp
-            name: sonarqube
-            subPath: tmp
-          - mountPath: /opt/sonarqube/extensions/downloads
-            name: sonarqube
-            subPath: downloads
-          - mountPath: /opt/sonarqube/extensions/plugins
-            name: sonarqube
-            subPath: plugins
-          {{- with .Values.env }}
-          env:
-            {{- . | toYaml | trim | nindent 12 }}
-          {{- end }}
+      {{- if .Values.extraInitContainers }}
+{{ toYaml .Values.extraInitContainers | indent 8 }}
+      {{- end }}
       {{- if .Values.caCerts }}
         - name: ca-certs
-          image: adoptopenjdk/openjdk11:alpine
+          image: {{ default "adoptopenjdk/openjdk11:alpine" .Values.caCerts.image }}
+          imagePullPolicy: {{ .Values.image.pullPolicy  }}
           command: ["sh"]
-          args: ["-c", "cp -f \"${JAVA_HOME}/lib/security/cacerts\" /tmp/certs/cacerts; for f in /tmp/secrets/ca-certs/*; do keytool -importcert -file \"${f}\" -alias \"$(basename \"${f}\")\" -keystore /tmp/certs/cacerts -storepass changeit -trustcacerts -noprompt; done;"]
+          args: ["-c", "cp -f \"${JAVA_HOME}/lib/security/cacerts\" /tmp/certs/cacerts; if [ \"$(ls /tmp/secrets/ca-certs)\" ]; then for f in /tmp/secrets/ca-certs/*; do keytool -importcert -file \"${f}\" -alias \"$(basename \"${f}\")\" -keystore /tmp/certs/cacerts -storepass changeit -trustcacerts -noprompt; done; fi;"]
+          {{- if $securityContext := .Values.initContainers.securityContext }}
+          securityContext:
+{{ toYaml $securityContext | indent 12 }}
+          {{- end }}
+          resources:
+{{ toYaml .Values.initContainers.resources | indent 12 }}
           volumeMounts:
             - mountPath: /tmp/certs
               name: sonarqube
@@ -85,15 +85,22 @@ spec:
             {{- . | toYaml | trim | nindent 12 }}
           {{- end }}
       {{- end }}
-      {{- if .Values.elasticsearch.configureNode }}
+      {{- if or .Values.initSysctl.enabled .Values.elasticsearch.configureNode }}
         - name: init-sysctl
-          image: {{ default "busybox:1.31" .Values.plugins.initSysctlContainerImage }}
+          image: {{ default "busybox:1.32" .Values.initSysctl.image }}
+          imagePullPolicy: {{ .Values.image.pullPolicy  }}
+          {{- if $securityContext := (default .Values.initContainers.securityContext .Values.initSysctl.securityContext) }}
           securityContext:
-            privileged: true
-          command:
-          - sysctl
-          - -w
-          - vm.max_map_count=262144
+{{ toYaml $securityContext | indent 12 }}
+          {{- end }}
+          resources:
+{{ toYaml (default .Values.initContainers.resources .Values.initSysctl.resources) | indent 12 }}
+          command: ["sh",
+            "-e",
+            "/tmp/scripts/init_sysctl.sh"]
+          volumeMounts:
+            - name: init-sysctl
+              mountPath: /tmp/scripts/
           {{- with .Values.env }}
           env:
             {{- . | toYaml | trim | nindent 12 }}
@@ -101,26 +108,77 @@ spec:
       {{- end }}
       {{- if .Values.plugins.install }}
         - name: install-plugins
-          image: {{ default "alpine:3.10.3" .Values.plugins.initContainerImage }}
+          image: {{ default "rjkernick/alpine-wget:latest" .Values.plugins.image }}
+          imagePullPolicy: {{ .Values.image.pullPolicy  }}
           command: ["sh",
-            "-c",
-            "mkdir -p {{ .Values.sonarqubeFolder }}/extensions/plugins/tmp &&
-            rm -f {{ .Values.sonarqubeFolder }}/extensions/plugins/tmp/* &&
-            cp /tmp/scripts/install_plugins.sh {{ .Values.sonarqubeFolder }}/extensions/plugins/tmp/install_plugins.sh &&
-            chmod 0775 {{ .Values.sonarqubeFolder }}/extensions/plugins/tmp/install_plugins.sh &&
-            {{ .Values.sonarqubeFolder }}/extensions/plugins/tmp/install_plugins.sh && pwd && ls -lah"]
+            "-e",
+            "/tmp/scripts/install_plugins.sh"]
           volumeMounts:
-            - mountPath: {{ .Values.sonarqubeFolder }}/extensions/plugins/tmp
+            - mountPath: {{ .Values.sonarqubeFolder }}/extensions/downloads
               name: sonarqube
-              subPath: tmp
+              subPath: extensions/downloads
+            - mountPath: {{ .Values.sonarqubeFolder }}/lib/common
+              name: sonarqube
+              subPath: lib/common
             - name: install-plugins
               mountPath: /tmp/scripts/
+            {{- if .Values.plugins.netrcCreds }}
+            - name: plugins-netrc-file
+              mountPath: /root
+            {{- end }}
+          {{- if $securityContext := .Values.initContainers.securityContext }}
+          securityContext:
+{{ toYaml $securityContext | indent 12 }}
+          {{- end }}
+          resources:
+{{ toYaml (default .Values.initContainers.resources .Values.plugins.resource) | indent 12 }}
           {{- with .Values.env }}
           env:
             {{- . | toYaml | trim | nindent 12 }}
           {{- end }}
+      {{- end }}
+      {{- if and .Values.sonarProperties .Values.sonarSecretProperties }}
+        - name: concat-properties
+          image: {{ default "busybox:1.32" .Values.initContainers.image }}
+          imagePullPolicy: {{ .Values.image.pullPolicy  }}
+          command: ["sh",
+            "-c",
+            "awk 1 /tmp/props/sonar.properties /tmp/props/secret.properties > /tmp/result/sonar.properties"]
+          volumeMounts:
+            - mountPath: /tmp/props/sonar.properties
+              name: config
+              subPath: sonar.properties
+            - mountPath: /tmp/props/secret.properties
+              name: secret-config
+              subPath: secret.properties
+            - mountPath: /tmp/result
+              name: concat-dir
+          {{- if $securityContext := .Values.initContainers.securityContext }}
+          securityContext:
+{{ toYaml $securityContext | indent 12 }}
+          {{- end }}
           resources:
-{{ toYaml .Values.plugins.resources | indent 12 }}
+{{ toYaml .Values.initContainers.resources | indent 12 }}
+          {{- with .Values.env }}
+          env:
+            {{- . | toYaml | trim | nindent 12 }}
+          {{- end }}
+      {{- end }}
+      {{- if .Values.postgresql.enabled }}      
+        - name: "wait-for-db"
+          image: {{ default "busybox:1.32" .Values.initContainers.image }}
+          imagePullPolicy: {{ .Values.image.pullPolicy  }}
+          {{- if $securityContext := .Values.initContainers.securityContext }}
+          securityContext:
+{{ toYaml $securityContext | indent 12 }}
+          {{- end }}
+          resources:
+{{ toYaml .Values.initContainers.resources | indent 12 }}
+          command: ["/bin/sh", "-c", "for i in $(seq 1 200); do nc -z -w3 {{ .Release.Name}}-postgresql 5432 && exit 0 || sleep 2; done; exit 1"]
+      {{- end }}          
+      {{- if .Values.priorityClassName }}
+      priorityClassName: {{ .Values.priorityClassName }}
+      {{- end }}
     {{- if .Values.nodeSelector }}
       nodeSelector:
 {{ toYaml .Values.nodeSelector | indent 8 }}
@@ -137,28 +195,10 @@ spec:
       affinity:
 {{ toYaml .Values.affinity | indent 8 }}
     {{- end }}
-      {{- end }}
-      {{- if and .Values.sonarProperties .Values.sonarSecretProperties }}
-        - name: concat-properties
-          image: {{ default "alpine:3.10.3" .Values.plugins.initContainerImage }}
-          command: ["sh",
-            "-c",
-            "awk 1 /tmp/props/sonar.properties /tmp/props/secret.properties > /tmp/result/sonar.properties"]
-          volumeMounts:
-            - mountPath: /tmp/props/sonar.properties
-              name: config
-              subPath: sonar.properties
-            - mountPath: /tmp/props/secret.properties
-              name: secret-config
-              subPath: secret.properties
-            - mountPath: /tmp/result
-              name: concat-dir
-          {{- with .Values.env }}
-          env:
-            {{- . | toYaml | trim | nindent 12 }}
-          {{- end }}
-      {{- end }}
       containers:
+      {{- if .Values.extraContainers }}
+        {{- toYaml .Values.extraContainers | nindent 8 }}
+      {{- end }}
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
@@ -166,55 +206,53 @@ spec:
             - name: http
               containerPort: {{ .Values.service.internalPort }}
               protocol: TCP
-          {{- if .Values.plugins.install }}
-          command:
-            - /tmp/scripts/copy_plugins.sh
-          {{- end }}
           env:
-            {{- with .Values.env }}
-            {{- . | toYaml | trim | nindent 12 }}
-            {{- end }}
-            - name: SONARQUBE_WEB_JVM_OPTS
+            - name: SONAR_WEB_JAVAOPTS
               {{- if .Values.caCerts }}
               value: {{ printf "-Djavax.net.ssl.trustStore=%s/certs/cacerts %s" .Values.sonarqubeFolder .Values.jvmOpts | trim | quote }}
               {{- else }}
               value: "{{ .Values.jvmOpts }}"
               {{- end }}
-            - name: SONARQUBE_JDBC_USERNAME
-              {{- if eq .Values.database.type "postgresql" }}
-              value: {{ .Values.postgresql.postgresqlUsername | quote }}
-              {{- else if eq .Values.database.type "mysql" }}
-              value: {{ .Values.mysql.mysqlUser | quote }}
-              {{- end }}
-            - name: SONARQUBE_JDBC_PASSWORD
+            {{- if .Values.caCerts }}
+            - name: SONAR_CE_JAVAOPTS
+              value: {{ printf "-Djavax.net.ssl.trustStore=%s/certs/cacerts" .Values.sonarqubeFolder | trim | quote }}
+            {{- end }}
+            - name: SONAR_JDBC_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  {{- if eq .Values.database.type "postgresql" }}
-                  name: {{- if .Values.postgresql.enabled }} {{ template "postgresql.fullname" .}} {{- else if .Values.postgresql.postgresqlPasswordSecret }} {{ .Values.postgresql.postgresqlPasswordSecret }} {{- else }} {{ template "sonarqube.fullname" . }} {{- end }}
-                  key: postgresql-password
-                  {{- else if eq .Values.database.type "mysql" }}
-                  name: {{- if .Values.mysql.enabled }} {{ template "mysql.fullname" .}} {{- else if .Values.mysql.mysqlPasswordSecret }} {{ .Values.mysql.mysqlPasswordSecret }} {{- else }} {{ template "sonarqube.fullname" . }} {{- end }}
-                  key: mysql-password
-                  {{- end }}
-            - name: SONARQUBE_JDBC_URL
-              {{- if eq .Values.database.type "postgresql" }}
-              value: "jdbc:postgresql://{{ template "postgresql.hostname" . }}:{{- .Values.postgresql.service.port -}}/{{- .Values.postgresql.postgresqlDatabase -}}"
-              {{- else if eq .Values.database.type "mysql" }}
-              value: "jdbc:mysql://{{ template "mysql.hostname" . }}:{{ .Values.mysql.service.port }}/{{ .Values.mysql.mysqlDatabase }}?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true{{- range $key, $value := .Values.mysql.mysqlParams }}&{{ $key }}={{ $value }}{{- end }}"
-              {{- end }}
+                  name: {{- if .Values.postgresql.existingSecret }} {{ .Values.postgresql.existingSecret }} {{ else }} {{ .Release.Name }}-postgresql {{- end }}
+                  key: {{ .Values.postgresql.secretKey }}
+            {{- with .Values.env }}
+            {{- . | toYaml | trim | nindent 12 }}
+            {{- end }}
+          envFrom:
+            - configMapRef:
+                name: {{ template "sonarqube.fullname" . }}-postgres-config
+{{- range .Values.extraConfig.secrets }}
+            - secretRef:
+                name: {{ . }}
+{{- end }}
+{{- range .Values.extraConfig.configmaps }}
+            - configMapRef:
+                name: {{ . }}
+{{- end }}
           livenessProbe:
             httpGet:
-              path: {{ .Values.livenessProbe.sonarWebContext }}sessions/new
+              path: {{ .Values.livenessProbe.sonarWebContext }}api/system/status
               port: http
             initialDelaySeconds: {{ .Values.livenessProbe.initialDelaySeconds }}
             periodSeconds: {{ .Values.livenessProbe.periodSeconds }}
           readinessProbe:
             httpGet:
-              path: {{ .Values.readinessProbe.sonarWebContext }}sessions/new
+              path: {{ .Values.readinessProbe.sonarWebContext }}api/system/status
               port: http
             initialDelaySeconds: {{ .Values.readinessProbe.initialDelaySeconds }}
             periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
             failureThreshold: {{ .Values.readinessProbe.failureThreshold }}
+          {{- if .Values.containerSecurityContext }}
+          securityContext:
+{{- toYaml .Values.containerSecurityContext | nindent 12 }}
+          {{- end }}
           volumeMounts:
 {{- if .Values.persistence.mounts }}
 {{ toYaml .Values.persistence.mounts | indent 12 }}
@@ -238,15 +276,22 @@ spec:
             - mountPath: {{ .Values.sonarqubeFolder }}/data
               name: sonarqube
               subPath: data
-            - mountPath: {{ .Values.sonarqubeFolder }}/extensions/plugins/tmp
+            {{- if .Values.persistence.enabled }}
+            - mountPath: {{ .Values.sonarqubeFolder }}/extensions
               name: sonarqube
-              subPath: tmp
+              subPath: extensions
+            {{- else if .Values.plugins.install }}
             - mountPath: {{ .Values.sonarqubeFolder }}/extensions/downloads
               name: sonarqube
-              subPath: downloads
-            - mountPath: {{ .Values.sonarqubeFolder }}/extensions/plugins
+              subPath: extensions/downloads
+            {{- end }}
+            {{- if .Values.plugins.lib }}
+            {{- range $index, $val := .Values.plugins.lib }}
+            - mountPath: {{ $.Values.sonarqubeFolder }}/lib/common/{{ $val }}
               name: sonarqube
-              subPath: plugins
+              subPath: lib/common/{{ $val }}
+            {{- end }}
+            {{- end }}
             - mountPath: {{ .Values.sonarqubeFolder }}/temp
               name: sonarqube
               subPath: temp
@@ -255,8 +300,6 @@ spec:
               subPath: logs
             - mountPath: /tmp
               name: tmp-dir
-            - name: copy-plugins
-              mountPath: /tmp/scripts
           resources:
 {{ toYaml .Values.resources | indent 12 }}
     {{- if .Values.nodeSelector }}
@@ -304,29 +347,36 @@ spec:
         secret:
           secretName: {{ .Values.caCerts.secret }}
       {{- end }}
+      {{- if .Values.plugins.netrcCreds }}
+      - name: plugins-netrc-file
+        secret:
+          secretName: {{ .Values.plugins.netrcCreds }}
+          items:
+          - key: netrc
+            path: .netrc
+      {{- end }}
+      - name: init-sysctl
+        configMap:
+          name: {{ template "sonarqube.fullname" . }}-init-sysctl
+          items:
+            - key: init_sysctl.sh
+              path: init_sysctl.sh
       - name: install-plugins
         configMap:
           name: {{ template "sonarqube.fullname" . }}-install-plugins
           items:
             - key: install_plugins.sh
               path: install_plugins.sh
-      - name: copy-plugins
-        configMap:
-          name: {{ template "sonarqube.fullname" . }}-copy-plugins
-          defaultMode: 0755
-          items:
-            - key: copy_plugins.sh
-              path: copy_plugins.sh
       - name: sonarqube
         {{- if .Values.persistence.enabled }}
         persistentVolumeClaim:
           claimName: {{ if .Values.persistence.existingClaim }}{{ .Values.persistence.existingClaim }}{{- else }}{{ template "sonarqube.fullname" . }}{{- end }}
         {{- else }}
-        emptyDir: {}
+        emptyDir: {{- toYaml .Values.emptyDir | nindent 10 }}
         {{- end  }}
       - name : tmp-dir
-        emptyDir: {}
+        emptyDir: {{- toYaml .Values.emptyDir | nindent 10 }}
         {{- if .Values.sonarSecretProperties }}
       - name : concat-dir
-        emptyDir: {}
+        emptyDir: {{- toYaml .Values.emptyDir | nindent 10 -}}
         {{- end }}
