--- a/sonarqube/values.yaml
+++ b/sonarqube/values.yaml
@@ -5,19 +5,38 @@ replicaCount: 1
 
  # This will use the default deployment strategy unless it is overriden
 deploymentStrategy: {}
+# Uncomment this to scheduler pods on priority
+# priorityClassName: "high-priority"
+
+## Use an alternate scheduler, e.g. "stork".
+## ref: https://kubernetes.io/docs/tasks/administer-cluster/configure-multiple-schedulers/
+##
+# schedulerName:
+
+## Is this deployment for OpenShift? If so, we help with SCCs
+OpenShift:
+  enabled: false
+  createSCC: true
 
 image:
   repository: sonarqube
-  tag: 7.9.2-community
+  tag: 8.9.7-community
+  pullPolicy: IfNotPresent
   # If using a private repository, the name of the imagePullSecret to use
   # pullSecret: my-repo-secret
 
 # Set security context for sonarqube pod
 securityContext:
-  fsGroup: 999
+  fsGroup: 1000
+
+# Set security context for sonarqube container
+containerSecurityContext:
+  # Sonarqube dockerfile creates sonarqube user as UID and GID 1000
+  runAsUser: 1000
 
 # Settings to configure elasticsearch host requirements
 elasticsearch:
+  # DEPRECATED: Use initSysctl.enabled instead
   configureNode: true
   bootstrapChecks: true
 
@@ -25,7 +44,7 @@ service:
   type: LoadBalancer
   port: 8080
   targetPort: 8080
-  nodePort: 30003
+  nodePort: 30002
   labels:
   annotations: {}
   # May be used in example for internal load balancing in GCP:
@@ -33,15 +52,21 @@ service:
   # loadBalancerSourceRanges:
   #   - 0.0.0.0/0
   # loadBalancerIP: 1.2.3.4
+  # You can set the port to be exposed when type is NodePort or LoadBalancer.
+  # nodePort: 30000
 ingress:
   enabled: false
   # Used to create an Ingress record.
   hosts:
     - name: sonar.organization.com
-      # default paths for "/" and "/*" will be added
+      # Different clouds or configurations might need /* as the default path
       path: /
-      # If a different path is defined, that path and {path}/* will be added to the ingress resource
-      # path: /sonarqube
+      # Only for API version "networking.k8s.io/v1"
+      # https://kubernetes.io/docs/concepts/services-networking/ingress/#path-types
+      pathType: Prefix
+      # For additional control over serviceName and servicePort
+      # serviceName: someService
+      # servicePort: somePort
   annotations: {}
   # kubernetes.io/ingress.class: nginx
   # kubernetes.io/tls-acme: "true"
@@ -57,6 +82,8 @@ ingress:
   # - secretName: chart-example-tls
   #   hosts:
   #     - chart-example.local
+
+  # className: nginx
 
 # Affinity for pod assignment
 # Ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity
@@ -95,11 +122,80 @@ livenessProbe:
   # If an ingress *path* is defined, it should be reflected here
   # sonar.web.context: /sonarqube
 
+initContainers:
+  # image: busybox:1.32
+  # We allow the init containers to have a separate security context declaration because
+  # the initContainer may not require the same as SonarQube.
+  # securityContext: {}
+  # We allow the init containers to have a separate resources declaration because
+  # the initContainer does not take as much resources.
+  resources: {}
+
+extraInitContainers: {}
+# Extra init containers to e.g. download required artifacts
+#  - name: "prometheus-exporter-downloader"
+#    image: "busybox"
+#    imagePullPolicy: "IfNotPresent"
+#    securityContext:
+#      runAsNonRoot: true
+#    command:
+#      - wget
+#      - "-O"
+#      - "/downloads/jmx_prometheus_javaagent.jar"
+#      - ${JMX_EXPORTER_URL}
+#    volumeMounts:
+#      - name: "downloads"
+#        mountPath: "/downloads"
+
+extraContainers: []
+## Array of extra containers to run alongside the sonarqube container
+## Example:
+#  - name: "example-container"
+#    image: "busybox"
+#    imagePullPolicy: Always
+#    command: ['sh', '-c', 'tail -f /dev/null']
+
 ## Provide a secret containing one or more certificate files in the keys that will be added to cacerts
-## The cacerts file will be set via SONARQUBE_WEB_JVM_OPTS
+## The cacerts file will be set via SONARQUBE_WEB_JVM_OPTS and SONAR_CE_JAVAOPTS
 ##
 # caCerts:
-#   secret: my-secret
+  # image: adoptopenjdk/openjdk11:alpine
+  # secret: my-secret
+
+initSysctl:
+  enabled: true
+  vmMaxMapCount: 524288
+  fsFileMax: 131072
+  nofile: 131072
+  nproc: 8192
+  # image: busybox:1.32
+  securityContext:
+    privileged: true
+  # resources: {}
+
+# List of plugins to install.
+# For example:
+# plugins:
+#  install:
+#    - "https://github.com/AmadeusITGroup/sonar-stash/releases/download/1.3.0/sonar-stash-plugin-1.3.0.jar"
+#    - "https://github.com/SonarSource/sonar-ldap/releases/download/2.2-RC3/sonar-ldap-plugin-2.2.0.601.jar"
+plugins:
+  install: []
+  lib: []
+
+  # For use behind a corporate proxy when downloading plugins
+  # httpProxy: ""
+  # httpsProxy: ""
+  # noProxy: ""
+
+  # image: rjkernick/alpine-wget:latest
+  # resources: {}
+
+  # .netrc secret file with a key "netrc" to use basic auth while downloading plugins
+  # netrcCreds: ""
+
+  # Set to true to not validate the server's certificate to download plugin
+  noCheckCertificate: false
 
 ## Values to add to SONARQUBE_WEB_JVM_OPTS
 ##
@@ -150,21 +246,11 @@ persistence:
   ## Specify extra mounts. Refer to ".spec.containers.volumeMounts" specification : https://kubernetes.io/fr/docs/concepts/storage/volumes/
   mounts: []
 
-# List of plugins to install.
-# For example:
-# plugins:
-#  install:
-#    - "https://github.com/AmadeusITGroup/sonar-stash/releases/download/1.3.0/sonar-stash-plugin-1.3.0.jar"
-#    - "https://github.com/SonarSource/sonar-ldap/releases/download/2.2-RC3/sonar-ldap-plugin-2.2.0.601.jar"
-plugins:
-  install: []
-  lib: []
-
-  # initContainerImage: alpine:3.10.3
-  # deleteDefaultPlugins: true
-  resources: {}
-  # We allow the plugins init container to have a separate resources declaration because
-  # the initContainer does not take as much resources.
+# In case you want to specify different resources for emptyDir than {}
+emptyDir: {}
+  # Example of resouces that might be used:
+  # medium: Memory
+  # sizeLimit: 16Mi
 
 # A custom sonar.properties file can be provided via dictionary.
 # For example:
@@ -181,11 +267,14 @@ plugins:
 # The 'sonar.secretKeyPath' property will be set automatically.
 # sonarSecretKey: "settings-encryption-secret"
 
-## Configuration value to select database type
-## Option to use "postgresql" or "mysql" database type, by default "postgresql" is chosen
-## Set the "enable" field to true of the database type you select (if you want to use internal database) and false of the one you don't select
-database:
-  type: "postgresql"
+## JDBC Database Type; by default postgresql. To use a different Database type, adjust
+jdbcDatabaseType: postgresql
+
+createPostgresqlSecret: true
+# create the postgresql secret in Sonarqube chart, outside of the postgresql chart.
+
+## Override JDBC URL
+# jdbcUrlOverride: "jdbc:postgresql://myPostgress/myDatabase;socketTimeout=1500"
 
 ## Configuration values for postgresql dependency
 ## ref: https://github.com/kubernetes/charts/blob/master/stable/postgresql/README.md
@@ -198,38 +287,95 @@ postgresql:
   # To use an external secret for the password for an external PostgreSQL
   # instance, set enabled to false and provide the name of the secret on the
   # line below:
-  # postgresqlPasswordSecret: ""
   postgresqlUsername: "sonarUser"
-  postgresqlPassword: "sonarPass"
+  postgresqlPassword: ""
   postgresqlDatabase: "sonarDB"
+  existingSecret: sonar-postgresql
+  # This is the full name of the secret that will be created
+  secretKey: postgresql-password
   # Specify the TCP port that PostgreSQL should use
   service:
     port: 5432
+  resources:
+    limits:
+      cpu: 2
+      memory: 2Gi
+    requests:
+      cpu: 100m
+      memory: 200Mi
+  persistence:
+    enabled: true
+    accessMode: ReadWriteOnce
+    size: 20Gi
+    storageClass:
+  securityContext:
+    # For standard Kubernetes deployment, set enabled=true
+    # If using OpenShift, enabled=false for restricted SCC and enabled=true for anyuid/nonroot SCC
+    enabled: true
+    # fsGroup and runAsUser specifications below are not applied if enabled=false. enabled=false is the required setting for OpenShift "restricted SCC" to work successfully.
+    # postgresql dockerfile sets user as 1001
+    fsGroup: 1001
+    runAsUser: 1001
+  volumePermissions:
+    # For standard Kubernetes deployment, set enabled=false
+    # For OpenShift, set enabled=true and ensure to set volumepermissions.securitycontext.runAsUser below.
+    enabled: false
+    # if using restricted SCC set runAsUser: "auto" and if running under anyuid/nonroot SCC - runAsUser needs to match runAsUser above
+    securityContext:
+      runAsUser: 0
+  shmVolume:
+    chmod:
+      enabled: false
+  serviceAccount:
+    ## If enabled = true, and name is not set, postgreSQL will create a serviceAccount
+    enabled: false
+#    name:
 
-## Configuration values for the mysql dependency
-## ref: https://github.com/kubernetes/charts/blob/master/stable/mysql/README.md
-##
-mysql:
-  # Enable to deploy the mySQL chart
-  enabled: false
-  # To use an external mySQL instance, set enabled to false and uncomment
-  # the line below:
-  # mysqlServer: ""
-  # To use an external secret for the password for an external mySQL instance,
-  # set enabled to false and provide the name of the secret on the line below:
-  # mysqlPasswordSecret: ""
-  mysqlUser: "sonarUser"
-  mysqlPassword: "sonarPass"
-  mysqlDatabase: "sonarDB"
-  # mysqlParams:
-  #   useSSL: "true"
-  # Specify the TCP port that mySQL should use
-  service:
-    port: 3306
-#
 # Additional labels to add to the pods:
 # podLabels:
 #   key: value
 podLabels: {}
 # For compatibility with 8.0 replace by "/opt/sq"
+# For compatibility with 8.2, leave the default. They changed it back to /opt/sonarqube
 sonarqubeFolder: /opt/sonarqube
+
+tests:
+  enabled: true
+  # image: bitnami/minideb-extras
+
+serviceAccount:
+  create: false
+  # name:
+  ## Annotations for the Service Account
+  annotations: {}
+
+# extraConfig is used to load Environment Variables from Secrets and ConfigMaps
+# which may have been written by other tools, such as external orchestrators.
+#
+# These Secrets/ConfigMaps are expected to contain Key/Value pairs, such as:
+#
+# apiVersion: v1
+# kind: ConfigMap
+# metadata:
+#   name: external-sonarqube-opts
+# data:
+#   SONARQUBE_JDBC_USERNAME: foo
+#   SONARQUBE_JDBC_URL: jdbc:postgresql://db.example.com:5432/sonar
+#
+# These vars can then be injected into the environment by uncommenting the following:
+#
+# extraConfig:
+#   configmaps:
+#     - external-sonarqube-opts
+
+extraConfig:
+  secrets: []
+  configmaps: []
+
+# account:
+#   adminPassword: admin
+#   currentAdminPassword: admin
+# curlContainerImage: curlimages/curl:latest
+# adminJobAnnotations: {}
+
+terminationGracePeriodSeconds: 60
